# smart-hood-system

./: .gitignore  CubeMX配置手册.md  CubeMX配置步骤.md  Mini H562 V1开发板IO引脚分配表.xlsx  README.md  acs712.txt  h562_sch_full.txt  pms7003.txt  sht40.txt  smart-hood-miniH562.ioc  硬件约束规划.md
ACS712传感器模块/: ACS712电流检测.docx
docs/: 01_requirements.md  02_system_architecture.md  03_hardware_bom.md  04_ai_model_design.md
docs/superpowers/: PROGRESS.md
docs/superpowers/plans/: 2026-05-24-sensor-drivers-plan.md
docs/superpowers/specs/: 2026-05-24-sensor-drivers-design.md
esp32-bridge/: .gitignore  platformio.ini
esp32-bridge/host_pc/: main.py  requirements.txt
esp32-bridge/host_pc/core/: data_store.py  ws_client.py
esp32-bridge/host_pc/ui/: camera_panel.py  control_panel.py  main_window.py  sensor_panel.py  style.py
esp32-bridge/host_pc/utils/: logger.py
esp32-bridge/include/: config.h  protocol.h
esp32-bridge/src/: frame_buffer.cpp  frame_buffer.h  main.cpp  uart_camera.cpp  uart_camera.h  uart_sensor.cpp  uart_sensor.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
firmware/: CMakeLists.txt
firmware/Core/Inc/: ai_engine.h  config.h  main.h  motor_control.h  openmv_bridge.h  sensor_hub.h  system_manager.h
firmware/Core/Src/: ai_engine.c  main.c  motor_control.c  openmv_bridge.c  sensor_hub.c  system_manager.c
firmware/Drivers/Hall/: hall.c  hall.h
firmware/Drivers/PMS7003/: pms7003.c  pms7003.h
firmware/Drivers/SGP40/: sgp40.c  sgp40.h
firmware/Drivers/SHT40/: sht40.c  sht40.h
firmware/Middleware/AI/: model.h
openmv/: main.py
project/: .mxproject  chuangganqi.ioc
project/Core/Inc/: FreeRTOSConfig.h  config.h  debug_console.h  main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  system_state.h
project/Core/Inc/app/: ai_engine.h  comm_task.h  sensor_hub.h  system_manager.h
project/Core/Inc/drivers/: hall.h  motor.h  pms7003.h  sgp40.h  sht40.h
project/Core/Inc/sensirion/: sensirion_config.h
project/Core/Src/: adc.c  app_freertos.c  debug_console.c  gpdma.c  gpio.c  i2c.c  iwdg.c  main.c  stm32h5xx_it.c  tim.c  usart.c
project/Core/Src/app/: ai_engine.c  comm_task.c  sensor_hub.c  system_manager.c
project/Core/Src/drivers/: hall.c  motor.c  pms7003.c  sgp40.c  sht40.c
project/Core/Src/sensirion/: sensirion_i2c_hal.c
project/MDK-ARM/: chuangganqi.uvoptx  chuangganqi.uvprojx  startup_stm32h562xx.s
tools/model_training/: sensor_fusion_model.py
tools/pc_simulator/: simulator.py
